add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/IndirectPredicates)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/VolumeMesher)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/spdlog)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/OpenMesh)

set(EIGEN3_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Eigen PARENT_SCOPE)
set(OpenMesh_INCLUDE_DIR ${OPENMESH_INCLUDE_DIR} PARENT_SCOPE)
set(OpenMesh_LIBRARIES ${OPENMESH_LIBRARIES} PARENT_SCOPE)
set(CGAL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/CGAL PARENT_SCOPE)
set(ENV{GMP_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/gmp)
set(ENV{MPFR_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/mpfr)